created and linked script.js added event listener to start button and console logged that when clicked, it starts my quizStart function.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ input[class="initials"] {
     font-weight: var(--font-weight-bold);
 }
 
-.btn:hover {
+.btn:hover, .start__btn:hover, .restart__btn:hover {
     border: .5px solid var(--clr-lite);
     opacity: .8;
 }
